--- a/Smartspend/app/src/main/AndroidManifest.xml
+++ b/Smartspend/app/src/main/AndroidManifest.xml
@@ -14,27 +14,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartSpend"
         tools:targetApi="31">
-
+        <activity
+            android:name=".SavingGoals"
+            android:exported="false" />
         <!-- Register Activity -->
         <activity
             android:name=".Register"
-            android:exported="true" />
-
-        <!-- Login Activity set as Launcher -->
+            android:exported="true" /> <!-- Login Activity set as Launcher -->
         <activity
             android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Main Activity (no longer the launcher) -->
+        </activity> <!-- Main Activity (no longer the launcher) -->
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-
     </application>
 
 </manifest>
