--- a/Smartspend/app/src/main/AndroidManifest.xml
+++ b/Smartspend/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
         android:theme="@style/Theme.SmartSpend"
         tools:targetApi="31">
         <activity
-            android:name=".SavingGoals"
+            android:name=".Notifications"
             android:exported="false" />
-        <!-- Register Activity -->
+        <activity
+            android:name=".SavingGoals"
+            android:exported="false" /> <!-- Register Activity -->
         <activity
             android:name=".Register"
             android:exported="true" /> <!-- Login Activity set as Launcher -->
