--- a/Smartspend/app/src/main/AndroidManifest.xml
+++ b/Smartspend/app/src/main/AndroidManifest.xml
@@ -15,11 +15,12 @@
         android:theme="@style/Theme.SmartSpend"
         tools:targetApi="31">
         <activity
-
+            android:name=".CategoryClicked"
+            android:exported="false" />
+        <activity
             android:name=".DetailedView"
             android:exported="false" />
         <activity
-
             android:name=".Profile"
             android:exported="false" />
         <activity
@@ -32,7 +33,6 @@
             android:name=".Notifications"
             android:exported="false" />
         <activity
-
             android:name=".SavingGoals"
             android:exported="false" /> <!-- Register Activity -->
         <activity
