--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,9 +44,9 @@ jobs:
       - name: Run Instrumentation Tests
         run: ./gradlew connectedAndroidTest
 
-      # Step 7: Upload Test Results (optional but recommended)
+      # Step 7: Upload Test Results (now using v3)
       - name: Upload Test Results
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: test-results
           path: app/build/reports/tests/testDebugUnitTest/
