--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,50 +1,39 @@
 name: Android CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  # Job named "build" for building and testing your Android app
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up JDK 11 (required by Android builds)
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
           java-version: '11'
 
-      # Step 3: Grant execute permission for the Gradle wrapper
+      # Ensure gradlew has execute permissions
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew  # Make sure 'gradlew' exists in the root directory
 
-      # Step 4: Build the project with Gradle
       - name: Build with Gradle
         run: ./gradlew build
 
-      # Step 5: Run Unit Tests (these are your local JVM-based tests)
       - name: Run Unit Tests
         run: ./gradlew test
 
-      # Step 6: Run Instrumentation Tests (these tests require an emulator)
       - name: Run Instrumentation Tests
         run: ./gradlew connectedAndroidTest
 
-      # Step 7: Upload Test Results (now using v3)
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
         with:
