--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,16 +23,16 @@ jobs:
 
       # Ensure gradlew has execute permissions
       - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew  # Make sure 'gradlew' exists in the root directory
+        run: chmod +x ${{ github.workspace }}/gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ${{ github.workspace }}/gradlew build
 
       - name: Run Unit Tests
-        run: ./gradlew test
+        run: ${{ github.workspace }}/gradlew test
 
       - name: Run Instrumentation Tests
-        run: ./gradlew connectedAndroidTest
+        run: ${{ github.workspace }}/gradlew connectedAndroidTest
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
