--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,40 +12,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Set up JDK 11
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
           java-version: '11'
 
-      # Set the working directory to where your gradlew file is located
-      - name: Set working directory
-        working-directory: Smartspend/Smartspend
+      # Change directory to where `gradlew` is located
+      - name: Change directory to project root
+        run: cd Smartspend/Smartspend
 
       # Grant execute permission for gradlew
       - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+        run: chmod +x Smartspend/Smartspend/gradlew
 
-      # Build with Gradle
       - name: Build with Gradle
-        run: ./gradlew build
+        run: Smartspend/Smartspend/gradlew build
 
-      # Run Unit Tests
       - name: Run Unit Tests
-        run: ./gradlew test
+        run: Smartspend/Smartspend/gradlew test
 
-      # Run Instrumentation Tests
       - name: Run Instrumentation Tests
-        run: ./gradlew connectedAndroidTest
+        run: Smartspend/Smartspend/gradlew connectedAndroidTest
 
-      # Upload Test Results
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
         with:
           name: test-results
-          path: app/build/reports/tests/testDebugUnitTest/
+          path: Smartspend/Smartspend/app/build/reports/tests/testDebugUnitTest/
