--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,22 +23,22 @@ jobs:
 
       # Grant execute permission for gradlew
       - name: Grant execute permission for gradlew
-       
+        working-directory: Smartspend
         run: chmod +x ./gradlew
 
       # Build with Gradle
       - name: Build with Gradle
-        working-directory: Smartspend/Smartspend
+        working-directory: Smartspend
         run: ./gradlew build
 
       # Run Unit Tests
       - name: Run Unit Tests
-        working-directory: Smartspend/Smartspend
+        working-directory: Smartspend
         run: ./gradlew test
 
       # Run Instrumentation Tests
       - name: Run Instrumentation Tests
-        working-directory: Smartspend/Smartspend
+        working-directory: Smartspend
         run: ./gradlew connectedAndroidTest
 
       # Upload Test Results
@@ -46,4 +46,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-results
-          path: Smartspend/Smartspend/app/build/reports/tests/testDebugUnitTest/
+          path: Smartspend/app/build/reports/tests/testDebugUnitTest/
