--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,10 +23,12 @@ jobs:
 
       # Grant execute permission for gradlew
       - name: Grant execute permission for gradlew
+        working-directory: Smartspend
         run: chmod +x ./gradlew
 
       # Build with Gradle
       - name: Build with Gradle
+        working-directory: Smartspend
         run: ./gradlew build
 
       # Run Unit Tests (JVM tests)
@@ -38,4 +40,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-results
-          path: app/build/reports/tests/testDebugUnitTest/
+          path: Smartspend/app/build/reports/tests/testDebugUnitTest/
