--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,8 +36,14 @@ jobs:
         working-directory: Smartspend
         run: ./gradlew test
 
-      # Upload Test Results
-      - name: Upload Test Results
+      # Upload JUnit Test Results for UI Display
+      - name: Upload JUnit Test Results
+        uses: actions/upload-test-report@v1
+        with:
+          path: Smartspend/app/build/test-results/testDebugUnitTest/ # Path to the test result XML files
+          
+      # Upload Test Results (as artifacts for additional use, if needed)
+      - name: Upload Test Results Artifact
         uses: actions/upload-artifact@v3
         with:
           name: test-results
