--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,13 +36,14 @@ jobs:
         working-directory: Smartspend
         run: ./gradlew test
 
-      # Upload JUnit Test Results for UI Display
+            # Upload JUnit Test Results for UI Display
       - name: Upload JUnit Test Results
         uses: dorny/test-reporter@v1
         with:
           name: JUnit Tests
           path: Smartspend/app/build/test-results/testDebugUnitTest/*.xml
-          reporter: junit
+          reporter: junit-xml
+
 
       # Upload Test Results Artifact
       - name: Upload Test Results Artifact
