--- a/Smartspend/app/src/main/AndroidManifest.xml
+++ b/Smartspend/app/src/main/AndroidManifest.xml
@@ -6,17 +6,23 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- For Android 12 and above -->
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
+    <!-- For Android 13 and above -->
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/smartspend_logo"
+        android:icon="@drawable/smartspend_app_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartSpend"
         tools:targetApi="31">
+        <receiver android:name=".NotificationReceiver" />
         <activity
             android:name=".GoalDetails"
             android:exported="false" />
