--- a/Smartspend/app/src/main/AndroidManifest.xml
+++ b/Smartspend/app/src/main/AndroidManifest.xml
@@ -5,11 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- For Android 12 and above -->
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-
-    <!-- For Android 13 and above -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- For Android 12 and above -->
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" /> <!-- For Android 13 and above -->
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
@@ -22,7 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartSpend"
         tools:targetApi="31">
+        <activity
+            android:name=".EditCategory"
+            android:exported="false" />
+
         <receiver android:name=".NotificationReceiver" />
+
         <activity
             android:name=".GoalDetails"
             android:exported="false" />
@@ -73,7 +75,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
