--- a/Smartspend/app/src/main/AndroidManifest.xml
+++ b/Smartspend/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/smartspend_app_logo"
-        android:label="@string/app_name"
+        android:label="SmartSpend"
+        tools:replace="android:label"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartSpend"
